--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -379,7 +379,7 @@ html {
 /* End */
 
 .iconCollapsed-3hFp_8, .iconDefault-3Gr8d2, .nameCollapsed-34uFWo, .nameDefault-2DI02H {
-    color: rgb(67, 181, 129);
+    color: var(--main-color);
 }
 
 .theme-dark #friends .friends-table .friends-row:hover {
