--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -741,10 +741,10 @@ div.unread-mentions-indicator-bottom {
     border-radius: 25px;
 }
 
-.guilds-1q_RqH > .guild-1EfMGQ > .guildInner-3DSoA4 {
+.guilds-1q_RqH > .guild-1EfMGQ:first-child > .guildInner-3DSoA4 {
     background: var(--friends-icon) !important;
     background-position: var(--friends-icon-position) !important;
-    background-repeat: no-repeat;
+    background-repeat: no-repeat !important;
     background-size: var(--friends-icon-zoom) !important;
 }
 
@@ -808,4 +808,9 @@ div.unread-mentions-indicator-bottom {
 /* Edit this to change the color of an unread text channel color */
 .nameUnreadText-DfkrI4, .nameUnreadVoice-EVo-wI {
     color: var(--unread-text-color);
+}
+
+#bd-pub-li #bd-pub-button {
+    border-radius: 25px !important;
+    background: #2f3136 !important;
 }
