--- a/css/scsl.css
+++ b/css/scsl.css
@@ -820,3 +820,38 @@ div.unread-mentions-indicator-bottom {
     margin-top: 0 !important;
     margin-bottom: 0 !important;
 }
+
+.bda-dark .emoji-picker, .bda-dark .emojiPicker-3m1S-j {
+    background-color: rgba(0,0,0,.4);
+}
+
+.bda-dark .emoji-picker .category, .bda-dark .emojiPicker-3m1S-j .category-2U57w6 {
+    background-color: transparent;
+}
+
+.bda-dark .emoji-picker .header .search-bar, .bda-dark .emojiPicker-3m1S-j .header-1nkwgG .search-bar {
+    background-color: rgba(33,33,33,.3);
+}
+
+.emojiPicker-3m1S-j .stickyHeader-1SS0JU {
+    background: rgba(55,55,55,.6);
+}
+
+.bda-dark .emoji-picker .scroller::-webkit-scrollbar, .bda-dark .emoji-picker .scroller::-webkit-scrollbar-track, .bda-dark .emoji-picker .scroller::-webkit-scrollbar-track-piece, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track, .bda-dark .emojiPicker-3m1S-j .scroller-3vODG7::-webkit-scrollbar-track-piece {
+    background-color: rgba(0,0,0,.8) !important;
+    border-color: rgba(0,0,0,.8) !important;
+}
+
+.scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb, .theme-dark .scrollerThemed-2oenus.themeLight-1_DWyY .scroller-2FKFPG::-webkit-scrollbar-thumb, .theme-light .scrollerWrap-2lJEkd .scroller-2FKFPG::-webkit-scrollbar-thumb {
+    background-color: var(--scroll-bar-color);
+}
+
+.emojiPicker-3m1S-j .category-2U57w6 {
+    color: var(--text-hover-color);
+    padding-left: 8px;
+}
+
+.emojiPicker-3m1S-j .stickyHeader-1SS0JU {
+    background: rgba(36,36,36,.8);
+    box-shadow: inset 9px 0 0px -7px var(--main-color);
+}
