--- a/css/dcsl.css
+++ b/css/dcsl.css
@@ -271,7 +271,7 @@ html {
 }
 
 .unread-1Dp-OI {
-    background-color: rgb(67, 181, 129);
+    background-color: var(--main-color);
     opacity: .6;
     border-radius: 100px;
     height: 8px;
@@ -706,7 +706,7 @@ div.unread-mentions-indicator-bottom {
 }
 
 .theme-dark .guild-1EfMGQ.unread-qLkInr:before {
-    background: var(--main-color);
+    background: rgb(67, 181, 129);
     animation: var(--unread-server-animation) 3s linear infinite;
 }
 
