--- a/css/tcsl.css
+++ b/css/tcsl.css
@@ -992,3 +992,11 @@ div.unread-mentions-indicator-bottom {
 .headerPlaying-j0WQBV {
     background: rgba(22,22,22,.8);
 }
+
+.topSectionSpotify-1lI0-P {
+    background: rgba(33, 33, 33, 0.6);
+}
+
+.topSectionPlaying-1J5E4n {
+    background: rgba(33, 33, 33, 0.6);
+}
