--- a/css/scsl.css
+++ b/css/scsl.css
@@ -449,7 +449,7 @@ html {
 }
 
 .theme-dark .menu-Sp6bN1 {
-    background: rgba(0,0,0,.8);
+    background: var(--main-transparency);
 }
 
 .theme-dark .item-1GzJrl:hover {
@@ -981,7 +981,7 @@ div.unread-mentions-indicator-bottom {
 }
 
 .theme-dark .body-3iLsc4, .theme-dark .footer-1fjuF6 {
-    background-color: rgba(0,0,0,.8);
+    background-color: var(--main-transparency);
     color: hsla(0,0%,100%,.8);
 }
 
@@ -1011,7 +1011,7 @@ div.unread-mentions-indicator-bottom {
 }
 
 .theme-dark .standardSidebarView-3F1I7i {
-    background: rgba(0,0,0,.8);
+    background: var(--main-transparency);
 }
 
 .theme-dark .contentRegion-3nDuYy {
@@ -1030,4 +1030,8 @@ div.unread-mentions-indicator-bottom {
 .theme-dark .itemBackground-1jfD8p:before {
     background: radial-gradient(ellipse at top,rgba(0,0,0,0),rgba(0,0,0,.75)),-webkit-gradient(linear,left top,right top,from(rgba(0,0,0,.75)),color-stop(40%,rgba(0,0,0,0)),color-stop(60%,rgba(0,0,0,0)),to(rgba(0,0,0,.75))),-webkit-gradient(linear,left bottom,left top,color-stop(10%,rgba(0,0,0,.75)),color-stop(70%,rgba(0,0,0,0))) !important;
     background: radial-gradient(ellipse at top,rgba(0,0,0,0),rgba(0,0,0,.75)),linear-gradient(90deg,rgba(0,0,0,.75) 0,rgba(0,0,0,0) 40%,rgba(0,0,0,0) 60%,rgba(0,0,0,.75)),linear-gradient(0deg,rgba(0,0,0,.75) 10%,rgba(0,0,0,0) 70%) !important;
+}
+
+.theme-dark .container-2Thooq, .theme-light .container-2Thooq {
+    background: transparent;
 }
