--- a/css/qcsl.css
+++ b/css/qcsl.css
@@ -1116,3 +1116,7 @@ div.unread-mentions-indicator-bottom {
 .scrollerWrap-1IAIlv {
     width: 242px;
 }
+
+.theme-dark .container-3gCOGc {
+    background-color: var(--main-transparency);
+}
